--- a/diseño/compiladores dieño base.ui
+++ b/diseño/compiladores dieño base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>700</height>
+    <width>918</width>
+    <height>705</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -69,26 +69,29 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>140</y>
+      <y>303</y>
       <width>131</width>
-      <height>24</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string>Validar</string>
     </property>
+    <property name="icon">
+     <iconset theme="accessories-calculator"/>
+    </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>180</y>
-      <width>131</width>
-      <height>21</height>
+      <x>170</x>
+      <y>630</y>
+      <width>701</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Estas onfire</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:18pt; font-weight:700; color:#14a30c;&quot;&gt;Estas onfire&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QOpenGLWidget" name="openGLWidget">
@@ -97,7 +100,7 @@
       <x>170</x>
       <y>50</y>
       <width>711</width>
-      <height>611</height>
+      <height>561</height>
      </rect>
     </property>
    </widget>
@@ -147,13 +150,33 @@
      </property>
     </item>
    </widget>
+   <widget class="QAxWidget" name="axWidget">
+    <property name="geometry" stdset="0">
+     <rect>
+      <x>70</x>
+      <y>510</y>
+      <width>80</width>
+      <height>70</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>50</y>
+      <width>711</width>
+      <height>561</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>900</width>
+     <width>918</width>
      <height>22</height>
     </rect>
    </property>
@@ -184,6 +207,13 @@
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QAxWidget</class>
+   <extends>QWidget</extends>
+   <header>qaxwidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
